rspec-tools/tests/resources/invalid-asciidoc/two_ifdef.adoc
Some description

ifdef::env-github,rspecator-view[]

A first ifdef block

endif::env-github,rspecator-view[]

ifdef::env-github,rspecator-view[]

This second ifdef should not be there

endif::env-github,rspecator-view[]
